--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"Coolsmpry.aternos.me",
-	"port": "23406",
-	"name": "coolsmpguard",
+	"ip":"dontshareip_coolsmp.aternos.me",
+	"port": "40658",
+	"name": "robot_coolsmp",
 	"auto-night-skip":"true"
 }
