--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"ip":"dontshareip_coolsmp.aternos.me",
 	"port": "40658",
-	"name": "robot_coolsmp",
-	"auto-night-skip":"true"
+	"name": "robot_ionman",
+	"auto-night-skip":"false"
 }
