--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"dontshareip_coolsmp.aternos.me",
+	"ip":"makesurvivecool.aternos.me",
 	"port": "40658",
-	"name": "robot_ionman",
+	"name": "baburao_ganpatrao_apte_24x7",
 	"auto-night-skip":"false"
 }
