--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"ip":"makesurvivecool.aternos.me",
 	"port": "40658",
-	"name": "baburao_ganpatrao_apte_24x7",
+	"name": "baburao_ganpatrao",
 	"auto-night-skip":"false"
 }
