--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"ip":"makesurvivecool.aternos.me",
 	"port": "40658",
-	"name": "baburao_ganpatrao",
+	"name": "ionman_robot",
 	"auto-night-skip":"false"
 }
