--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"makesurvivecool.aternos.me",
-	"port": "40658",
-	"name": "ionman_robot",
+	"ip":"HardsmpXDL.aternos.me",
+	"port": "20600",
+	"name": "Jai_Bot",
 	"auto-night-skip":"false"
 }
